--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   get: ^4.7.3
   flutter_svg: ^2.2.3
   flutter_staggered_grid_view: ^0.7.0
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
